# FAA

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  config.yaml  pyproject.toml
src/finance_agent/: __init__.py  __main__.py  cli.py  config.py
src/finance_agent/agent/: debate.py  loop.py  models.py  pool.py  team.py
src/finance_agent/agent/prompts/: __init__.py  analysts.py  debate.py  leader.py
src/finance_agent/mcp/: __init__.py  server.py
src/finance_agent/memory/: __init__.py  ingestion.py  kg.py  scratchpad.py  shared_board.py  timeseries.py  vector.py
src/finance_agent/tools/: __init__.py  fundamentals.py  macro.py  market.py  options.py  registry.py  risk.py  sentiment.py  technical.py
